deployment-selector-namespace.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vid-family-service-app
  namespace: vid-namespace
  labels:
    app: vid-family-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vid-family-service-app
  template:
    metadata:
      labels:
        app: vid-family-service-app
    spec:
      containers:
        - name: vid-family-service-app
          image: vidhanchandrauk/vidhan-family-service:latest
          ports:
            - containerPort: 8444
---
apiVersion: v1
kind: Service
metadata:
  name: vid-family-service-svc
  namespace: vid-namespace
spec:
  ports:
    - targetPort: 8444
      port: 80
  selector:
    app: vid-family-service-app
