deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vidservice-deploy
  labels:
    app: vid-family-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vid-family-app
  template:
    metadata:
      labels:
        app: vid-family-app
    spec:
      containers:
        - name: vid-family-app-pod
          image: vidhanchandrauk/vidhan-family-service:latest
          ports:
            - containerPort: 8444
---
apiVersion: v1
kind: Service
metadata:
  name: vidservice-sevice
spec:
  type: NodePort
  selector:
    app: vid-family-app
  ports:
    - targetPort: 8444
      port: 8444
      nodePort: 30080
