ingress-svc.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vid-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: vidhan-family.com
      http:
        paths:
          - path: /family/(.+)
            pathType: Prefix
            backend:
              service:
                name: vidservice-sevice
                port:
                  number: 8444
